LPS-20803 - Improving the app column display. Each column now has equal heights in Gecko and Webkit and partial on IE8; still fixing for IE8.

--- a/portal-web/docroot/html/themes/_styled/css/application.css
+++ b/portal-web/docroot/html/themes/_styled/css/application.css
@@ -602,12 +602,21 @@
 .aui-app-column-view {
 	border: 1px solid #C9C9C9;
 
-	.aui-column-content {
-		border-right: 1px solid #C9C9C9;
+	.aui-layout {
+		position: relative;
 	}
 
-	.aui-column-last {
-		border-right-width: 0;
+	.aui-column:before {
+		border-right: 1px solid #C9C9C9;
+		bottom: 0;
+		content: "";
+		margin-left: -1px;
+		position: absolute;
+		top: 0;
+	}
+
+	.results-header {
+		border-bottom: 1px solid #C9C9C9;
 	}
 }
 
